# LRPS2

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  main.cpp
libretro/: CMakeLists.txt  disk_control.h  input.cpp  input.h  language_injector.cpp  language_injector.h  libretro.h  libretro_core_options.h  libretro_core_options_intl.h  libretro_d3d.h  main.cpp  memcard_retro.h  options.cpp  options.h  options_enums.h  options_mgmt.h  options_tools.h  retro_inline.h  retro_messager.cpp  retro_messager.h
pcsx2/: AsyncFileReader.h  CMakeLists.txt  COP0.cpp  COP0.h  COP2.cpp  Cache.cpp  Cache.h  Common.h  Config.h  Counters.cpp  Counters.h  Dmac.cpp  Dmac.h  Dump.cpp  Elfheader.cpp  Elfheader.h  EmuOptionsUI.h  EmuOptionsVM.h  FPU.cpp  FW.cpp  FW.h  FiFo.cpp  FlatFileReader.cpp  GS.cpp  GS.h  GSState.cpp  GameDatabase.cpp  GameDatabase.h  Gif.cpp  Gif.h  GifTypes.h  Gif_Logger.cpp  Gif_Unit.cpp  Gif_Unit.h  Hw.cpp  Hw.h  HwRead.cpp  HwWrite.cpp  IPC.cpp  IPC.h  (+93 more)
pcsx2/CDVD/: BlockdumpFileReader.cpp  CDVD.cpp  CDVD.h  CDVD_internal.h  CDVDaccess.cpp  CDVDaccess.h  CDVDdiscReader.cpp  CDVDdiscReader.h  CDVDdiscThread.cpp  CDVDisoReader.cpp  CdRom.cpp  CdRom.h  ChdFileReader.cpp  ChdFileReader.h  ChunksCache.cpp  ChunksCache.h  CompressedFileReader.cpp  CompressedFileReaderUtils.h  CsoFileReader.cpp  CsoFileReader.h  DriveUtility.cpp  GzippedFileReader.cpp  GzippedFileReader.h  IOCtlSrc.cpp  InputIsoFile.cpp  IsoFileFormats.h  OutputIsoFile.cpp  zlib_indexed.h
pcsx2/DEV9/: DEV9.cpp  DEV9.h
pcsx2/Darwin/: DarwinFlatFileReader.cpp
pcsx2/DebugTools/: Breakpoints.cpp  Breakpoints.h  Debug.h  DebugInterface.cpp  DebugInterface.h  DisR5900asm.cpp  DisVU0Micro.cpp  DisassemblyManager.cpp  DisassemblyManager.h  ExpressionParser.cpp  ExpressionParser.h  MIPSAnalyst.cpp  MIPSAnalyst.h  MipsAssembler.cpp  MipsAssembler.h  SymbolMap.cpp  SymbolMap.h
pcsx2/GS/: GS.cpp  GS.h  GSAlignedClass.h  GSBlock.h  GSClut.cpp  GSClut.h  GSCrc.cpp  GSCrc.h  GSDrawingContext.cpp  GSDrawingContext.h  GSFuncs.h  GSLocalMemory.cpp  GSLocalMemory.h  GSState.cpp  GSState.h  GSThread_CXX11.h  GSUtil.cpp  GSUtil.h  GSVector.h  GSdx.cpp  stdafx.h
pcsx2/IPU/: IPU.cpp  IPU.h  IPU_Fifo.cpp  IPU_Fifo.h  IPUdither.cpp  IPUdma.cpp  IPUdma.h  yuv2rgb.cpp  yuv2rgb.h
pcsx2/Linux/: LnxFlatFileReader.cpp
pcsx2/PAD/: KeyStatus.h  PAD.cpp  PAD.h  state_management.cpp  state_management.h
pcsx2/RDebug/: deci2_ttyp.cpp
pcsx2/Recording/: InputRecording.cpp
pcsx2/SPU2/: ADSR.cpp  Config.h  Dma.cpp  Dma.h  DplIIdecoder.cpp  Global.h  Mixer.cpp  Mixer.h  ReadInput.cpp  RegTable.cpp  Reverb.cpp  SndOut.h  defs.h  regs.h  spdif.h  spu2.cpp  spu2.h  spu2freeze.cpp  spu2sys.cpp
pcsx2/SPU2LR/: Config.h  Global.h  Mixer.cpp  Reverb.cpp  SndOut.h  defs.h  spu2.cpp
pcsx2/System/: RecTypes.h  SysCoreThread.cpp  SysFakeThread.cpp  SysThreadBase.cpp  SysThreads.h
pcsx2/USB/: USB.cpp  USB.h
pcsx2/Utilities/: AsciiFile.h  FileUtils.cpp
pcsx2/ZipTools/: thread_gzip.cpp
pcsx2/gui/: App.h  AppAccelerators.h  AppAssert.cpp  AppCommon.h  AppConfig.cpp  AppConfig.h  AppCorePlugins.cpp  AppCoreThread.cpp  AppCoreThread.h  AppEventListeners.h  AppEventSources.cpp  AppForwardDefs.h  AppGameDatabase.cpp  AppGameDatabase.h  AppInit.cpp  AppMain.cpp  AppRes.cpp  AppSaveStates.h  AppUserMode.cpp  ApplyState.h  ConsoleLogger.cpp  ConsoleLogger.h  CpuUsageProvider.cpp  DriveList.cpp  DriveList.h  ExecutorThread.cpp  GSFrame.h  GlobalCommands.cpp  IsoDropTarget.h  MSWstuff.cpp  MSWstuff.h  MainFrame.h  MainMenuClicks.cpp  MemoryCardFile.cpp  MemoryCardFile.h  MemoryCardFolder.cpp  MemoryCardFolder.h  Saveslots.h  SysCoreThread.cpp  SysFakeThread.cpp  (+7 more)
pcsx2/gui-libretro/: App.h  AppAccelerators.h  AppAssert.cpp  AppConfig.cpp  AppConfig.h  AppCorePlugins.cpp  AppCoreThread.cpp  AppCoreThread.h  AppEventSources.cpp  AppForwardDefs.h  AppGameDatabase.cpp  AppGameDatabase.h  AppInit.cpp  AppMain.cpp  AppRes.cpp  ConsoleLogger.cpp  ConsoleLogger.h  ExecutorThread.cpp  GSFrame.h  MemoryCardFile.cpp  MemoryCardFolder.cpp  pxEventThread.h
pcsx2/ps2/: BiosTools.cpp  BiosTools.h  HwInternal.h  LegacyDmac.cpp  pgif.cpp  pgif.h
pcsx2/windows/: Optimus.cpp  Win32.h  WinCompressNTFS.cpp
pcsx2/x86/: BaseblockEx.cpp  BaseblockEx.h  R5900_Profiler.h  iCOP0.cpp  iCOP0.h  iCore.cpp  iCore.h  iFPU.cpp  iFPUd.cpp  iMMI.cpp  iMisc.cpp  iR3000A.cpp  iR3000A.h  iR3000Atables.cpp  iR5900.h  iR5900Arit.h  iR5900AritImm.h  iR5900Branch.h  iR5900Jump.h  iR5900LoadStore.h  iR5900Misc.cpp  iR5900Move.h  iR5900MultDiv.h  iR5900Shift.h  ir5900tables.cpp  microVU.cpp  microVU.h  microVU_Alloc.inl  microVU_Analyze.inl  microVU_Branch.inl  microVU_Clamp.inl  microVU_Compile.inl  microVU_Execute.inl  microVU_Flags.inl  microVU_IR.h  microVU_Lower.inl  microVU_Macro.inl  microVU_Misc.h  microVU_Misc.inl  microVU_Profiler.h  (+7 more)
plugins/: CMakeLists.txt
plugins/DEV9/: CMakeLists.txt
plugins/GS/: CMakeLists.txt  GS.cpp  GS.h  GSAlignedClass.h  GSBlock.cpp  GSBlock.h  GSClut.cpp  GSClut.h  GSCodeBuffer.cpp  GSCodeBuffer.h  GSCrc.cpp  GSCrc.h  GSDrawingContext.cpp  GSDrawingContext.h  GSDrawingEnvironment.h  GSLocalMemory.cpp  GSLocalMemory.h  GSPerfMon.cpp  GSPerfMon.h  GSState.cpp  GSState.h  GSTables.cpp  GSTables.h  GSThread_CXX11.h  GSUtil.cpp  GSUtil.h  GSVector.cpp  GSVector.h  GSVector4.h  GSVector4i.h  GSVector8.h  GSVector8i.h  GSdx.cpp  config.h  stdafx.h
plugins/GSdx/: CMakeLists.txt  GS.cpp  GS.h  GSDrawingContext.cpp  GSDrawingEnvironment.h  GSPerfMon.cpp  GSPerfMon.h  GSState.cpp  GSState.h  GSThread.h  GSUtil.cpp  GSUtil.h  GSdx.cpp  GSdx.def  GSdx.h  GSdx.rc  GSdx.vcxproj  GSdx.vcxproj.filters  config.h  resource.h  stdafx.cpp  stdafx.h
plugins/GSnull/: CMakeLists.txt  GS.cpp  GS.h  GSLog.cpp  GifTransfer.cpp
plugins/LilyPad/: CMakeLists.txt  LilyPad.cpp
plugins/PAD/: CMakeLists.txt  KeyStatus.h
plugins/PadNull/: CMakeLists.txt  Pad.cpp  Pad.h
plugins/USB/: CMakeLists.txt
plugins/USBnull/: CMakeLists.txt  USB.cpp
plugins/USBqemu/: USB.cpp  USB.h
plugins/dev9ghzdrk/: CMakeLists.txt  DEV9.cpp  DEV9.h  (+1 more)
(+419 files in other folders)
